--- a/CDC Data ETL.ipynb
+++ b/CDC Data ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "id": "ef89d27a",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "8e1b5859",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "4             1/2/2020            91  Missing"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "277c5cb9",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "id": "3cb64476",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "9             1/3/2020            61       No"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "253fefd8",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "fa6af9dc",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "dc0154db",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "effa359d",
    "metadata": {},
    "outputs": [
@@ -36372,13 +36372,23 @@
        "2774            42  2023-10-17 to 2023-10-23  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "baa730f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('COVID-19_Case_Surveillance_Public_clean.csv')"
    ]
   }
  ],
