--- a/api/report.ipynb
+++ b/api/report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "source": [
     "import requests\n",
     "import json"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "source": [
     "stock_api = \"http://localhost:8001/api/spy\"\n",
     "economics_api = \"http://localhost:8001/api/economics\"\n",
@@ -28,36 +28,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "source": [
-    "stocks = requests.get(stock_api, headers=headers)\n"
+    "stocks_data = requests.get(stock_api, headers=headers).json()[\"data\"]"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "source": [
-    "economic_indicators = requests.get(economics_api, headers=headers)"
+    "economic_indicators_data = requests.get(economics_api, headers=headers).json()[\"data\"]"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "source": [
-    "emissions = requests.get(emissions_api, headers=headers)"
+    "emissions_data = requests.get(emissions_api, headers=headers).json()[\"data\"]"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "source": [
-    "covid = requests.get(covid_api, headers=headers)"
+    "covid_data = requests.get(covid_api, headers=headers).json()[\"data\"]"
    ],
    "outputs": [],
    "metadata": {}
