--- a/api/report.ipynb
+++ b/api/report.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "source": [
     "import requests\n",
-    "import json"
+    "import json\n",
+    "import pandas as pd\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "source": [
     "stock_api = \"http://localhost:8001/api/spy\"\n",
     "economics_api = \"http://localhost:8001/api/economics\"\n",
@@ -28,36 +29,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "source": [
-    "stocks_data = requests.get(stock_api, headers=headers).json()[\"data\"]"
+    "stocks_data = requests.get(stock_api, headers=headers).json()[\"data\"]\n",
+    "stocks_df = pd.DataFrame.from_records(stocks_data)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "source": [
-    "economic_indicators_data = requests.get(economics_api, headers=headers).json()[\"data\"]"
+    "economic_indicators_data = requests.get(economics_api, headers=headers).json()[\"data\"]\n",
+    "economic_indicators_df = pd.DataFrame.from_records(economic_indicators_data)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "source": [
-    "emissions_data = requests.get(emissions_api, headers=headers).json()[\"data\"]"
+    "emissions_data = requests.get(emissions_api, headers=headers).json()[\"data\"]\n",
+    "emissions_df = pd.DataFrame.from_records(emissions_data)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "source": [
-    "covid_data = requests.get(covid_api, headers=headers).json()[\"data\"]"
+    "covid_data = requests.get(covid_api, headers=headers).json()[\"data\"]\n",
+    "covid_df = pd.DataFrame.from_records(covid_data)"
    ],
    "outputs": [],
    "metadata": {}
